# VIO

curve_fitting_LM/: CMakeLists.txt
curve_fitting_LM/app/: CMakeLists.txt  CurveFitting.cpp
curve_fitting_LM/backend/: CMakeLists.txt  edge.cc  edge.h  eigen_types.h  problem.cc  problem.h  vertex.cc  vertex.h
curve_fitting_LM/utils/: tic_toc.h
hessian_nullspace/: CMakeLists.txt  nullspace.cpp
